tests/security/xhpScriptWithGet/output.txt
ERROR: TaintedData - input.hack:3:21 - Data from a URL query string found its way to an HTML tag